Styling fixes now that this doesn't use <IconButton>
That component used to have padding: 8px,
but it looks strange now that the padding
isn't here.

--- a/src/blocks/block-button/styles/editor.scss
+++ b/src/blocks/block-button/styles/editor.scss
@@ -10,6 +10,7 @@
 
 	&+ .blocks-button__inline-link .components-button {
 		display: inline-block;
+		padding: 8px;
 	}
 
 	&+ .blocks-button__inline-link svg {
